--- a/PhantasmaMail/PhantasmaMail.Android/PhantasmaMail.Android.csproj
+++ b/PhantasmaMail/PhantasmaMail.Android/PhantasmaMail.Android.csproj
@@ -68,6 +68,9 @@
     <PackageReference Include="CarouselView.FormsPlugin">
       <Version>5.2.0</Version>
     </PackageReference>
+    <PackageReference Include="MaterialFormControls">
+      <Version>2018.2.22-pre1</Version>
+    </PackageReference>
     <PackageReference Include="PCLStorage">
       <Version>1.0.2</Version>
     </PackageReference>
@@ -135,6 +138,7 @@
     <Compile Include="MainApplication.cs" />
     <Compile Include="Renderers\CustomFrameRenderer.cs" />
     <Compile Include="Renderers\CustomNavigationPageRenderer.cs" />
+    <Compile Include="Renderers\ExpandableEditorRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AndroidSQLService.cs" />
