--- a/PhantasmaMail/PhantasmaMail.UWP/PhantasmaMail.UWP.csproj
+++ b/PhantasmaMail/PhantasmaMail.UWP/PhantasmaMail.UWP.csproj
@@ -105,6 +105,13 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\Geo.otf" />
+    <Content Include="Assets\OpenSans-LightItalic.ttf" />
+    <Content Include="Assets\OpenSans-Regular.ttf" />
+    <Content Include="Assets\OpenSans-SemiBold.ttf" />
+    <Content Include="Assets\Roboto-Medium.ttf" />
+    <Content Include="Assets\SF UI Text Regular.otf" />
+    <Content Include="Assets\SF UI Text Semibold.otf" />
     <None Include="PhantasmaMail.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -128,6 +135,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.0.1</Version>
+    </PackageReference>
     <PackageReference Include="CarouselView.FormsPlugin">
       <Version>5.2.0</Version>
     </PackageReference>
@@ -137,11 +147,26 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.5</Version>
     </PackageReference>
+    <PackageReference Include="PCLStorage">
+      <Version>1.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.1.4.168</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.4.118</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfListView">
+      <Version>16.2.0.42</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfPicker">
-      <Version>16.1.0.37</Version>
+      <Version>16.2.0.42</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh">
+      <Version>16.2.0.42</Version>
+    </PackageReference>
+    <PackageReference Include="System.Security.Cryptography.Algorithms">
+      <Version>4.3.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>0.6.0-preview</Version>
@@ -156,7 +181,10 @@
       <Version>2.4.3.840</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.1.0.583944</Version>
+      <Version>3.1.0.637273</Version>
+    </PackageReference>
+    <PackageReference Include="Xfx.Controls">
+      <Version>1.1.3</Version>
     </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile">
       <Version>2.4.1</Version>
@@ -170,6 +198,17 @@
       <Project>{447d553c-16d0-4d0c-9b3b-5852454f69db}</Project>
       <Name>PhantasmaMail</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <SDKReference Include="Microsoft.VCLibs, Version=14.0">
+      <Name>Visual C++ 2015 Runtime for Universal Windows Platform Apps</Name>
+    </SDKReference>
+    <SDKReference Include="WindowsDesktop, Version=10.0.16299.0">
+      <Name>Windows Desktop Extensions for the UWP</Name>
+    </SDKReference>
+    <SDKReference Include="WindowsMobile, Version=10.0.17134.0">
+      <Name>Windows Mobile Extensions for the UWP</Name>
+    </SDKReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
