--- a/PhantasmaMail/PhantasmaMail/PhantasmaMail.csproj
+++ b/PhantasmaMail/PhantasmaMail/PhantasmaMail.csproj
@@ -7,6 +7,11 @@
     <RootNamespace>PhantasmaMail</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Resources\Images\bars.png" />
     <None Remove="tokens.json" />
@@ -23,7 +28,7 @@
     <PackageReference Include="CarouselView.FormsPlugin" Version="5.2.0" />
     <PackageReference Include="MaterialFormControls" Version="2018.2.22-pre1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
-    <PackageReference Include="NeoModules.NEP6" Version="0.0.23-beta" />
+    <PackageReference Include="NeoModules.NEP6" Version="0.0.26" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="PCLStorage" Version="1.0.2" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.1.4.168" />
