--- a/PhantasmaMail/PhantasmaMail.UWP/PhantasmaMail.UWP.csproj
+++ b/PhantasmaMail/PhantasmaMail.UWP/PhantasmaMail.UWP.csproj
@@ -319,6 +319,10 @@
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Assets\SplashScreen.scale-100.png" />
+    <Content Include="Assets\SplashScreen.scale-125.png" />
+    <Content Include="Assets\SplashScreen.scale-150.png" />
+    <Content Include="Assets\SplashScreen.scale-400.png" />
     <Content Include="Assets\SplashScreenDesktop.png" />
     <Content Include="Assets\star.svg">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
